--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -21,23 +21,23 @@ Beacons happen automatically, and Hotspots witness automatically. Successful Wit
 :::
 
 ## Witness List in Explorer and Helium App
-The list you find in explorer.helium.com and the Helium app are a historical, cumulative set of Hotspots that have witnessed your Hotspot emit a Beacon. This list is based on 5 previous days of Proof-of-Coverage <a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">receipts</a>.
+The list you find in explorer.helium.com and the Helium app are a historical, cumulative set of Hotspots that have witnessed your Hotspot emit a Beacon. This list is based on 2 previous days of Proof-of-Coverage <a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">receipts</a>.
 
 Here is an example:
 
-| January 1 |  January 2  | January 3 | January 4 | January 5 |
-| :----: | :----: | :----: | :----: | :----: | 
-| 13 | 4 | 5 | 10 | 10 |
+| January 1 |  January 2  | 
+| :----: | :----: |
+| 13 | 4 | 
 
-Total: 42 Witnesses
+Total: 17 Witnesses
 
 The following day, the witnesses from January 1 is rolled over and a new day's worth of data is added.
 
-| January 2  |  January 3 |   January 4 | January 5 | January 6 |
-| :----: | :----: | :----: | :----: | :----: | 
-| 4 | 5 | 10 | 10 | 8 |
+| January 2  |  January 3 |
+| :----: | :----: |
+| 4 | 5 |
 
-Total: 37 Witnesses
+Total: 9 Witnesses
 
 
 
