--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6335,7 +6335,7 @@ Search results for `search=skinny-iron`
 ## Validator Activity
 
 ```
-GET https://api.helium.io/v1/validator/:address/activity
+GET https://api.helium.io/v1/validators/:address/activity
 ```
 
 Lists all blockchain transactions that the given validator was involved in.This
@@ -6437,7 +6437,7 @@ This lists the activity for validator
 ## Validator Activity Counts
 
 ```
-GET https://api.helium.io/v1/validator/:address/activity/count
+GET https://api.helium.io/v1/validators/:address/activity/count
 ```
 
 Count transactions that indicate activity for a validator.
