--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -52,7 +52,8 @@ another Hotspot on the network and can adversely affect mining and earnings.
 Relayed Hotspots can be identified in Explorer.
 
 We recommend enabling TCP Ports 44158 in both directions in your modem. Check
-your Router's manufacturing instructions on how to open ports 44158.
+your Router's manufacturing instructions on how to open ports 44158. 
+You could also try setting up a dmz network to see if that helps, as we have hear that working in some cases.
 
 To get started with port forwarding, check out https://portforward.com
 
