--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -97,6 +97,11 @@ This map layer, when selected, shows yellow hexagons of Hotspots that have witne
 
 To view a list of Hotspots that your Hotspot has witnessed, switch to the Witnesses tab.
 
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-witnesses.png")} width="200"/>
+
+These Hotspots have recently witnessed a Beacon from Magic Fleece Terrier based on Proof-of-Coverage receipts. 
+
+
 ### Transmit Scale
 
 Previously known as Reward Scale, the Transmit Scale has been renamed to properly explain what this number conveys: this number is a multiplier that is applied to rewards of *any Hotspot that witness you*. The scale also affects how many rewards you receive as a Challenger. 
