--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -93,7 +93,10 @@ By default, if there is an owned Hotspot in a hexagon, it will be colored blue, 
 
 ### Witness
 
-This map layer, when selected, shows yellow hexagons of Hotspots that have witnessed the *selected* Hotspot. 
+This map layer, when selected, shows yellow hexagons of Hotspots that have witnessed the *selected* Hotspot (outlined in white). 
+
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-witnesses-hex.png")} width="200"/>
+
 
 To view a list of Hotspots that your Hotspot has witnessed, switch to the Witnesses tab.
 
