--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -8,7 +8,7 @@ slug: /wallets/app-wallet/hexagons
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 
-# Introduction to Hexagons
+# Understanding Hexagons
 
 Hexagons, while also a six-sided shape, is the underlying representation of the earth on the Helium network. Based on Uber's H3 index, the surface of the earth can be represented by a grid of hexagons at different resolutions, with higher resolutions covering a larger area, and the smallest resolution coverage centimeters of the earth. To understand the technical details and the implementation, please check out the <a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog one of the core developers</a>.
 
@@ -32,7 +32,6 @@ Hexagons, while also a six-sided shape, is the underlying representation of the 
 
 Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 0.3 m². This is why some Hotspot appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy over Hotspot locations grew alongside with it. 
 
-Future discussions need to occur if the Helium network changes Hotspot asserts from resolution 12 to any other resolution. Changes to assert resolution will impact Proof-of-Coverage logic and will be discussed in a future HIP (Helium Improvement Proposal).
 
 <img src={useBaseUrl("img/wallets/helium-app/hexagons.png")} width="400"/>
 
