--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -59,7 +59,7 @@ Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
 To view a map of the network, go to the **Hotspot** tab. 
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} />
 
 Each occupied hexagon will have a grey hexagon representing 1 Hotspot. Hexagons with more than 1 Hotspot will show a number.
 
@@ -67,7 +67,7 @@ Tapping on a hexagon with a number will bring up a Hotspot selector, showing the
 
 Hotspots that you follow will be **purple**, and Hotspots that you own will be **blue**. Other Hotspots will be grey.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} />
 
 
 The **Owned and Followed Hotspot** Map layer is displayed by default.
@@ -76,7 +76,7 @@ The **Owned and Followed Hotspot** Map layer is displayed by default.
 
 App version 3.3.0 introduces three new map layers. 
 
-<img src={useBaseUrl("img/wallets/helium-app/map-filters.png")} width="600"/>
+<img src={useBaseUrl("img/wallets/helium-app/map-filters.png")} />
 
 1. Owned and Followed Hotspots
 2. Witness
@@ -87,19 +87,19 @@ This layer colors hexagons where you own or follow Hotspots. If the owned or fol
 
 By default, if there is an owned Hotspot in a hexagon, it will be colored blue, even if there is a followed Hotspot occupying that hexagon.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-owned-followed.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-owned-followed.png")} />
 
 
 ### Witness
 
 This map layer, when selected, shows yellow hexagons of Hotspots that have witnessed the *selected* Hotspot (outlined in white). 
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses-hex.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses-hex.png")} />
 
 
 To view a list of Hotspots that your Hotspot has witnessed, switch to the Witnesses tab.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses.png")} />
 
 These Hotspots have recently witnessed a Beacon from Magic Fleece Terrier based on Proof-of-Coverage receipts. 
 
@@ -125,12 +125,12 @@ In the app, the color of a resolution 8 hexagon is based on the average transmit
 
 So if a hexagon has 3 Hotspots, with scales 1.0, 0.74, and 0.68, the average scale of that hexagon is 0.80667 and the color will be tinged light green.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-scaling.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-scaling.png")} />
 
 ## Discovery Mode
 Discovery Mode is a tool to understand Hotspot coverage. Responders that heard a Discovery Mode packet will be highlighted in a yellow hexagon. Tapping on the yellow hexagon will bring up the name of the Hotspot that responded.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-disco-results.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-disco-results.png")} />
 
 ## Assert Location
 Hotspot can now see how many other Hotspots are occupying hexagons next to them. 
@@ -141,7 +141,7 @@ It's important to be truthful in where your Hotspot is located for Proof-of-Cove
 
 :::
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-assert.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-assert.png")} />
 
 
 
