--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -21,6 +21,11 @@ the latest updates.
 
 :::
 
+## Video Guide for Setup
+
+https://youtu.be/OuujPVK8f3U
+
+
 ## Prerequisites
 
 Prior to configuring your Dragino to work with the Helium network, please
