--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -23,7 +23,7 @@ the latest updates.
 
 ## Video Guide for Setup
 
-https://youtu.be/OuujPVK8f3U
+[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/OuujPVK8f3U/0.jpg)](https://www.youtube.com/watch?v=OuujPVK8f3U)
 
 
 ## Prerequisites
