Draw out an accidentally swallowed heading. (#409)

--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -61,8 +61,11 @@ If you still have trouble and are able to run the diagnostics, please send a rep
 to the Hotspot manufacturer. Please include a video of your screen if possible, to
 show the exact steps.  
 iOS 11 or later: https://support.apple.com/en-us/HT207935 (Android may require a
-separate app for screenshots.) I tried to add the Hotspot, but it says it’s
-owned by someone else: This means the Hotspot has already been added to the
+separate app for screenshots.)
+
+## I tried to add the Hotspot, but it says it’s owned by someone else:
+
+This means the Hotspot has already been added to the
 blockchain and is already associated with a wallet. You may see this if you
 purchased a Hotspot from a non-authorized reseller, or if you are part of a
 Hosting program where you host the Hotspot for someone else.
