--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -103,7 +103,7 @@ This map layer, when selected, shows yellow hexagons of Hotspots that have witne
 <img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses-hex.png")} />
 
 
-To view a list of your witnessed Hotspots, switch to the Witnesses tab.
+To view a list of Hotspots that have witnessed your Hotspot, switch to the Witnesses tab.
 
 <img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-witnesses.png")} />
 
@@ -171,7 +171,7 @@ A: For every Hotspot at a resolution 12, we scale up to a resolution 8 and snap 
 A: Two Hotspots may occupy the same resolution 8 hexagons even if they are more than 300 meters away. Remember that a resolution 8 hexagon has an area of 737.3276 m² with edges measuring 461.354684 meters.
 
 
-**Q: Why do Hotspots in a hex have such varied scaling values?**
+**Q: Why do Hotspots in the same a hex have such varied scaling values?**
 
 A: Each Hotspot's transmit scale is a formula based on its density in a number of resolutions (from resolution 12 to resolution 4). Hotspot A that occupies the same resolution as Hotspot B may be in a very dense resolution 10 hexagon, thus lowering their scale, while Hotspot B may be the only Hotspot occupying its resolution 10 hexagon, meaning their scale is not affected. 
 
