[dnm] app res8 (#393)
* first pass

* fix tag

* add base URL

* update info box

* stuff

* image sizing

* trying again

* fixing all images

* update

* fix images

* updating to main

* witnesses

* add screenshot

* file names

* update images

* stuff

* words

* update image

* last minute changes

Co-authored-by: Coco Tang <cocotang@MacBook-Pro.attlocal.net>
Co-authored-by: Coco Tang <cocotang@MacBook-Pro.local>

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -21,8 +21,16 @@ things like:
 - Configure your Wi-Fi
 - View your Hotspot's activity
 - See where other Hotspots are located
+- Run Discovery Mode
 
 [Check out the latest app release notes](https://engineering.helium.com/)
+
+## Guides 
+
+* [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
+* [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
+* [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
+* [Understanding Hexagons](/wallets/app-wallet/hexagons)
 
 ## Hotspot Tab
 
@@ -60,8 +68,4 @@ community Discord channel.
 <img src={useBaseUrl("img/wallets/helium-app/settings-nav.png")} />
 
 
-## Guides 
 
-* [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
-* [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
-* [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
