--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -115,7 +115,7 @@ These Hotspots have recently witnessed a Beacon from Magic Fleece Terrier based 
 Previously known as Reward Scale, the Transmit Scale has been renamed to properly explain what this number conveys. 
 
 
-**Transmit scale is a multiplier that is applied to rewards of *any Hotspot that witness you*. The scale also affects how many rewards you receive as a Challenger.**
+**Transmit scale is a multiplier that is applied to rewards of *any Hotspot that witness you*. The scale also affects how many rewards you receive as a Challengee.**
 
 
 The number is a representation of how dense a hexagon is (how many Hotspots occupy that hex) at various resolutions (from resolution 12 down to resolution 4). This means that if any Hotspots asserts themselves between 0.3 m² to 1,770.3235517 km² away from your Hotspot, its scale can change. If you're interested in how this is calculated, check out the <a href="https://engineering.helium.com/2020/12/09/blockchain-release-hip-17.html">engineering blog</a>.
