--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -2,16 +2,16 @@
 id: cli-wallet
 sidebar_label: CLI
 slug: /wallets/cli-wallet
+hide_title: true
 ---
 
 # Command Line Interface Wallet
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-The Command Line Interface (CLI) The Helium Command Line Interface (CLI) wallet
-is the most flexible but it also requires more technical knowledge. As such, it
-is suitable for all types of transactions, but requires more caution on behalf
-of its users.
+The Helium Command Line Interface (CLI) wallet is the most flexible but it also
+requires more technical knowledge. As such, it is suitable for all types of
+transactions, but requires more caution on behalf of its users.
 
 ## Installing CLI Wallet
 
