add disco guide

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -31,6 +31,7 @@ things like:
 * [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
 * [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
 * [Understanding Hexagons](/wallets/app-wallet/hexagons)
+* [Discovery Mode](/wallets/app-wallet/discovery-mode)
 
 ## Hotspot Tab
 
