--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -56,13 +56,18 @@ To start Discovery Mode for your Hotspot, go to the Hotspot and tap the **Settin
 
 Then tap Discovery Mode.
 
+<img src={useBaseUrl("img/wallets/helium-app/disco-mode.png")} />
+
+
 :::tip
 
 Make sure your Hotspot is not relayed. Hotspots that are relayed may not receive instructions from Router in a timely manner, preventing it from starting a session.
 
 :::
 
-Once Discovery Mode starts, the Hotspot sends out 10 packets. Hotspots that hear it will eventually light up as yellow hexagons.
+Once Discovery Mode starts, the Hotspot sends out 10 packets. Responders that heard a Discovery Mode packet will be highlighted in a yellow hexagon. Tapping on the yellow hexagon will bring up the name of the Hotspot that responded.
+
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-disco-results.png")} />
 
 Discovery Mode runs for 5 minutes. You may close the app and do something else during this time.
 
