fix copy on intro

--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -7,10 +7,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Command Line Interface Wallet
 
-
-The Helium Command Line Interface (CLI) wallet is the most flexible but it also
-requires more technical knowledge. As such, it is suitable for all types of
-transactions, but requires more caution on behalf of its users.
+The Helium Command Line Interface (CLI) wallet is the most flexible of the
+wallet options but it also requires more technical knowledge. As such, it
+is suitable for all types of transactions, but requires more caution on
+behalf of its users.
 
 ## Installing CLI Wallet
 
