--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -56,7 +56,7 @@ To start Discovery Mode for your Hotspot, go to the Hotspot and tap the **Settin
 
 Then tap Discovery Mode.
 
-<img src={useBaseUrl("img/wallets/helium-app/disco-mode.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/disco-entry.png")} />
 
 
 :::tip
@@ -74,3 +74,22 @@ Discovery Mode runs for 5 minutes. You may close the app and do something else d
 *Why 5 minutes?*
 Router sometimes receives late packets from Hotspots. By extending session lengths to 5 minutes, we can capture and display all the Hotspots that heard a Discovery Mode packet, even if they're late.
 
+# FAQ
+**Q. Is Discovery Mode a good representation of what a Hotspot can mine?**
+A. Discovery Mode is a tool meant to understand coverage and to compare if one setup or configuration is better than another. Discovery Mode ignores all the rules and logic of Proof-of-Coverage, so if you have lots of Hotspots nearby (within 300 meters), you may see them as valid responders in Discovery Mode, but they may be invalid witnesses for Proof-of-Coverage purposes.
+Discovery Mode also circumvents the issue with Relayed Hotspots. Any Hotspots that witness a beacon but is relayed, is unlikely to appear as a valid witness but may appear as a responder in Discovery Mode.
+
+**Q. How should I use Discovery Mode?**
+A. Use Discovery Mode to compare different antennas, different locations, elevations, inside, or outside. 
+
+**Q. Do I need to set a location before running Discovery Mode?**
+A. A location is not required before running Discovery Mode.
+
+**Q. What does it mean that my Hotspot was unable to initiate a session?**
+A. If the Hotspot is not relayed, it could mean that there were no responders or the Hotspot's firmware version is not up to date. 
+
+**Q. I have a relayed Hotspot. Can I run Discovery Mode?**
+A. We have seen varying levels of success when relayed Hotspots run Discovery Mode. Some succeed and some don't. We recommend getting your Hotspot out of Relayed status for optimal performance.
+
+**Q. My Discovery Mode results vary. What explains this?**
+A. Assuming all components of Discovery Mode are working properly (no outages on Router, app API, Console), differences between back to back sessions should not exist. But! Atmospheric and environmental impacts can affect whether a Hotspot can receive a packet. 
