--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -60,15 +60,32 @@ When a Hotspot that is relayed issues a challenge, the receipt (or acknowledgeme
 
 Any witnesses that heard the beacon will have issues submitting their receipts to the challenger in a timely manner.
 
-The Challenger does not earn HNT, Challengee does not earn HNT, witnesses do not earn HNT.
+The Challenger does not earn HNT, Challengee (Beaconer) does not earn HNT, witnesses do not earn HNT.
+
+<img src={useBaseUrl("img/wallets/helium-app/challenger-relayed.png")} />
+Thanks to @oktyvm for these awesome graphics!
+
+
 
 ### Relayed Hotspot as a Challengee (Beaconer)
 A Challenger that sends a request to the Challengee expects an acknowledgement or a receipt by the Challangee within a certain period of time. If the Challengee is relayed, the initial request can take too long to arrive at the relayed Hotspot, and the request becomes stale and invalid. 
 
-The Challenger does not earn HNT, Challengee does not earn HNT, witnesses that respond do not earn HNT.
+The Challenger does not earn HNT, Challengee (Beaconer) does not earn HNT.
+
+<img src={useBaseUrl("img/wallets/helium-app/beaconer-relayed.png")} />
+Thanks to @oktyvm for these awesome graphics!
+
+
 
 ### Relayed Hotspot as a Witness
 Hotspots that witness Beacons have to submit their receipt to the Challenger in a timely manner in order to earn HNT. If the witnessing Hotspot is relayed, then they are unlikely to submit their receipt in time.
+
+<img src={useBaseUrl("img/wallets/helium-app/witness-relayed.png")} />
+Thanks to @oktyvm for these awesome graphics!
+
+
+
+
 
 :::info
 
