--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -192,7 +192,7 @@ $ helium-wallet create basic --seed
 
 After you press enter, you will be prompted for your seed words.
 
-::: info
+::: tip
 
 Remember, your seed is your private key. Keep it safe and private. When you import the seed as a CLI wallet,
 you do not "log yourself out" of your mobile wallet; you've only copied the private key from your mobile
