--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -3,35 +3,37 @@ id: cli-wallet
 sidebar_label: CLI
 slug: /wallets/cli-wallet
 ---
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Command Line Interface Wallet
 
 The Helium Command Line Interface (CLI) wallet is the most flexible of the
-wallet options but it also requires more technical knowledge. As such, it
-is suitable for all types of transactions, but requires more caution on
-behalf of its users.
+wallet options but it also requires more technical knowledge. As such, it is
+suitable for all types of transactions, but requires more caution on behalf of
+its users.
 
 ## Installing CLI Wallet
 
-Releases of the CLI wallet are [tagged and hosted on Github](https://github.com/helium/helium-wallet-rs/tags).
+Releases of the CLI wallet are
+[tagged and hosted on Github](https://github.com/helium/helium-wallet-rs/tags).
 Click on "Downloads" for the most recent release and select the appropriate
 package for your operating system.
 
 Unpack the zip file and place the helium-wallet binary in your $PATH somewhere.
-This operation differs depending on your operating system, but is a common
-task and easily searchable.
+This operation differs depending on your operating system, but is a common task
+and easily searchable.
 
 ## Usage
 
 At any time, use `--help` to see the most recent documentation and help for the
 CLI wallet.
 
-At time of this writing, version 1.5.6 looks like this:
+At time of this writing, version 1.6.0 looks like this:
 
 ```
 $ helium-wallet --help
-helium-wallet 1.5.6
+helium-wallet 1.6.0
 Common options for most wallet commands
 
 USAGE:
@@ -83,27 +85,31 @@ about a certain transaction (or subcommand), simply append `--help`. eg:
 helium-wallet pay --help
 ```
 
-This documentation will not cover every single command, but we will provide some basic examples
-to help you get familiar.
+This documentation will not cover every single command, but we will provide some
+basic examples to help you get familiar.
 
 ## Create Wallet
 
 `helium-wallet create basic`
 
-This command will create a wallet as a single key, stored in `wallet.key` which gets output
-in whatever directory you ran this command.
+This command will create a wallet as a single key, stored in `wallet.key` which
+gets output in whatever directory you ran this command.
 
-Upon creation, the CLI will prompt you for a password which encrypts the file. A strong password
-will make it difficult for someone to brute force the file should the file be compromised.
+Upon creation, the CLI will prompt you for a password which encrypts the file. A
+strong password will make it difficult for someone to brute force the file
+should the file be compromised.
 
 ### Display Wallet
 
-Displaying information for one or more wallets without needing its password can be done using;
+Displaying information for one or more wallets without needing its password can
+be done using;
+
 ```
     helium-wallet info
 ```
 
 To display a QR code for the public key of the given wallet use:
+
 ```
     helium-wallet info --qr
 ```
@@ -112,13 +118,13 @@ This is useful for sending tokens to the wallet from the mobile wallet.
 
 ### Wallet Creation Features
 
-Creating a wallet above is easy, but there's a lot more flexibility you might not know about. It's
-always recommended to explore the help menu to learn more:
+Creating a wallet above is easy, but there's a lot more flexibility you might
+not know about. It's always recommended to explore the help menu to learn more:
 
 ```
 $ helium-wallet create basic --help
 
-helium-wallet-create-basic 1.5.6
+helium-wallet-create-basic 1.6.0
 Create a new basic wallet
 
 USAGE:
@@ -141,62 +147,67 @@ We'll go through a few examples next.
 
 ### Managing Multiple Wallets
 
-You can specify a more precise location or filename when _creating a wallet_ by using the
-`--output` flag. eg:
+You can specify a more precise location or filename when _creating a wallet_ by
+using the `--output` flag. eg:
 
 `helium-wallet create basic --output ~/my-wallets/wallet-5.key`
 
-When _using a wallet_, you can specify a file other than the default `./wallet.key` by using
-the the global option `--file`. eg:
+When _using a wallet_, you can specify a file other than the default
+`./wallet.key` by using the the global option `--file`. eg:
 
 `helium-wallet -f ~/my-wallets/wallet-5.key pay <AMOUNT> <ADDRESS>`
 
 ### Sharded Wallet
 
-Sharding wallet keys is supported via Shamir's Secret Sharing. A key can be broken into N shards such that
-recovering the original key needs K distinct shards. This can be done by passing options to create:
+Sharding wallet keys is supported via Shamir's Secret Sharing. A key can be
+broken into N shards such that recovering the original key needs K distinct
+shards. This can be done by passing options to create:
 
 ```
     helium-wallet create sharded -n 5 -k 3
 ```
 
-This will create wallet.key.1 through wallet.key.5 (the base name of the wallet file can be supplied with
-the `--output` parameter).
+This will create wallet.key.1 through wallet.key.5 (the base name of the wallet
+file can be supplied with the `--output` parameter).
 
 When keys are sharded using verify will require at least K distinct keys.
 
-The `--seed` option described above can also be used to construct a sharded wallet.
+The `--seed` option described above can also be used to construct a sharded
+wallet.
 
 #### Implementation details
 
-A ed25519 key is generated via libsodium. The provided password is run through PBKDF2, with a configurable
-number of iterations and a random salt, and the resulting value is used as an AES key. When sharding is
-enabled, an additional AES key is randomly generated and the 2 keys are combined using a sha256 HMAC into
-the final AES key.
+A ed25519 key is generated via libsodium. The provided password is run through
+PBKDF2, with a configurable number of iterations and a random salt, and the
+resulting value is used as an AES key. When sharding is enabled, an additional
+AES key is randomly generated and the 2 keys are combined using a sha256 HMAC
+into the final AES key.
 
-The private key is then encrypted with AES256-GCM and stored in the file along with the sharding information,
-the key share (if applicable), the AES initialization vector, the PBKDF2 salt and iteration count and the
-AES-GCM authentication tag.
+The private key is then encrypted with AES256-GCM and stored in the file along
+with the sharding information, the key share (if applicable), the AES
+initialization vector, the PBKDF2 salt and iteration count and the AES-GCM
+authentication tag.
 
 ### Import Seed
 
-The `--seed` flag enables you to import a wallet generated elsewhere. For example, you may want to import
-you key from the mobile wallet, so that you can submit transactions that may not be supported in the mobile
-wallet.
+The `--seed` flag enables you to import a wallet generated elsewhere. For
+example, you may want to import you key from the mobile wallet, so that you can
+submit transactions that may not be supported in the mobile wallet.
 
 Enter the command:
 
 ```
-$ helium-wallet create basic --seed
+$ helium-wallet create basic --seed mobile
 ```
 
 After you press enter, you will be prompted for your seed words.
 
 :::tip
 
-Remember, your seed is your private key. Keep it safe and private. When you import the seed as a CLI wallet,
-you do not "log yourself out" of your mobile wallet; you've only copied the private key from your mobile
-wallet into the CLI. Mobile wallet and CLI wallet both have a local copies of  the key and can submit
+Remember, your seed is your private key. Keep it safe and **private**. When you
+import the seed as a CLI wallet, you do not "log yourself out" of your mobile
+wallet; you've only copied the private key from your mobile wallet into the CLI.
+Mobile wallet and CLI wallet both have a local copies of the key and can submit
 transactions to the blockchain API.
 
 :::
@@ -208,7 +219,7 @@ If you explore the pay command, you will see the following:
 ```
 $ helium-wallet pay --help
 
-helium-wallet-pay 1.5.6
+helium-wallet-pay 1.6.0
 Send one (or more) payments to given addresses.
 
 The payment is not submitted to the system unless the '--commit' option is given.
@@ -237,7 +248,7 @@ Let's explore the `one` subcommand to figure out usage for a single payment:
 ```
 $ helium-wallet pay one --help
 
-helium-wallet-pay-one 1.5.6
+helium-wallet-pay-one 1.6.0
 Single payee
 
 USAGE:
@@ -255,22 +266,24 @@ ARGS:
     <amount>     Amount of HNT to send
 ```
 
-The `USAGE` section is is very helpful: `helium-wallet pay one [OPTIONS] <address> <amount>`.
+The `USAGE` section is is very helpful:
+`helium-wallet pay one [OPTIONS] <address> <amount>`.
 
-For example, if I want to send 5.0 HNT to `14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S`,
-it would look like this:
+For example, if I want to send 5.0 HNT to
+`14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S`, it would look like this:
 
 ```
 helium-wallet pay one 14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S 5 --commit
 ```
 
-The `--commit` FLAG is a global option to the `pay` command - you'll recall it was documented at the
-scope of `helium-wallet pay --help`. It's critical for **all transactions** to confirm that you want
-the transaction to be submitted to the blockchain API.
+The `--commit` FLAG is a global option to the `pay` command - you'll recall it
+was documented at the scope of `helium-wallet pay --help`. It's critical for
+**all transactions** to confirm that you want the transaction to be submitted to
+the blockchain API.
 
-When you commit a transaction to the API, you will be provided with a **transaction hash**. This is
-a unique identifier for your transaction on the blockchain and you can track your transcation status
-using the API endpoint:
+When you commit a transaction to the API, you will be provided with a
+**transaction hash**. This is a unique identifier for your transaction on the
+blockchain and you can track your transcation status using the API endpoint:
 
 ```
 https://api.helium.io/v1/pending_transactions/YOUR_HASH_HERE
