Add arch diagram

--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -48,8 +48,7 @@ Discovery Mode sends 10x more packets than a normal Beacon for Proof-of-Coverage
 
 :::
 
-GRAPHIC FROM BELO GOES HERE
-
+<img src={useBaseUrl("img/wallets/helium-app/disco-architecture.png")} />
 
 # Running Discovery Mode
 To start Discovery Mode for your Hotspot, go to the Hotspot and tap the **Settings** icon.
