--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -48,6 +48,10 @@ Discovery Mode sends 10x more packets than a normal Beacon for Proof-of-Coverage
 
 :::
 
+## Discovery Mode Architecture Diagram
+
+Putting it all together:
+
 <img src={useBaseUrl("img/wallets/helium-app/disco-architecture.png")} />
 
 # Running Discovery Mode
